crates/hexeract-macros/tests/ui/fail_no_result_return.stderr
error: return type must be a `Result`
  --> tests/ui/fail_no_result_return.rs:13:63
   |
13 |     async fn handle(&self, _c: Cmd, _ctx: &HandlerContext) -> Vec<u8> {
   |                                                               ^^^^^^^

warning: unused import: `HandlerContext`
 --> tests/ui/fail_no_result_return.rs:1:30
  |
1 | use hexeract_core::{Command, HandlerContext};
  |                              ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
